<resources>
    <string name="app_name" translatable="false">LexisPaper</string>
    <string name="app_name_about">About LexisPaper</string>
    <string name="action_settings">Settings</string>
    <string name="settings_activity_title">Settings</string>
    <string name="settings_preference_screen_root" translatable="false">settings_preference_screen_root</string>
    <string name="settings_category_data_transfer" translatable="false">settings_preference_category_data_transfer</string>
    <string name="settings_account_header">Account</string>
    <string name="settings_add_play_account_title">Google account</string>
    <string name="settings_add_play_account_summary">Sign in</string>
    <string name="settings_add_play_account_key" translatable="false">settings_add_play_account</string>
    <string name="settings_sign_out_play_account_title">Sign out</string>
    <string name="settings_sign_out_account_key" translatable="false">settings_sign_out_play_account</string>
    <string name="settings_data_transfer_header">Data Transfer</string>
    <string name="settings_sync_account_title">Enable data sync</string>
    <string name="settings_sync_account_summary">Sync data via Google Drive</string>
    <string name="settings_sync_account_key" translatable="false">settings_sync_account</string>
    <string name="settings_theme_header">Decor</string>
    <string name="settings_change_theme_title">Theme color</string>
    <string name="settings_change_theme_key" translatable="false">settings_change_theme</string>
    <string name="settings_change_theme_dialog_title">Choose a theme color</string>
    <string name="settings_content_header">Content</string>
    <string name="settings_load_remote_content_title">Load remote content</string>
    <string name="settings_load_remote_content_key" translatable="false">settings_change_load_remote_content</string>
    <string name="settings_load_remote_content_dialog_title">Choose a mode</string>
    <string name="settings_speech_language_title">Speech language</string>
    <string name="settings_speech_language_key" translatable="false">settings_change_speech_language</string>
    <string name="settings_speech_language_dialog_title">Choose a language</string>
    <string name="settings_fab_zoom_title">Zoom button</string>
    <string name="settings_fab_zoom_summary">Display button over articles to zoom</string>
    <string name="settings_fab_zoom_key" translatable="false">settings_fab_zoom</string>
    <string name="settings_double_tap_scroll_to_top_title">Double tap on tab</string>
    <string name="settings_double_tap_scroll_to_top_summary">Scroll content to top when double tap on tab</string>
    <string name="settings_double_tap_scroll_to_top_key" translatable="false">settings_double_tap_on_tab_scroll_to_top</string>
    <string name="settings_long_tap_scroll_to_bottom_title">Long tap on tab</string>
    <string name="settings_long_tap_scroll_to_bottom_summary">Scroll content to bottom when long tap on tab</string>
    <string name="settings_long_tap_scroll_to_bottom_key" translatable="false">settings_long_tap_on_tab_scroll_to_bottom</string>
    <string name="settings_volume_navigation_title">Volume navigation</string>
    <string name="settings_volume_navigation_summary">Use volume hardware buttons to navigate between article\'s pages and within them</string>
    <string name="settings_volume_navigation_summary_info">How?</string>
    <string name="settings_volume_navigation_key" translatable="false">settings_volume_navigation</string>
    <string name="settings_article_in_fullscreen_title">Article in fullscreen</string>
    <string name="settings_article_in_fullscreen_summary">Open articles in fullscreen mode</string>
    <string name="settings_article_in_fullscreen_key" translatable="false">settings_article_in_fullscreen</string>
    <string name="settings_category_lookup" translatable="false">settings_preference_category_lookup</string>
    <string name="settings_lookup_header">Lookup</string>
    <string name="settings_random_lookup_title">Random lookup</string>
    <string name="settings_random_lookup_summary">Use only favourite dictionaries to perform random lookup</string>
    <string name="settings_random_lookup_key" translatable="false">settings_random_lookup</string>
    <string name="settings_misc_header">Misc</string>
    <string name="settings_open_about_title">About</string>
    <string name="settings_open_about_key" translatable="false">settings_open_about</string>
    <string name="settings_open_privacy_policy_title">Privacy Policy</string>
    <string name="settings_open_privacy_policy_key" translatable="false">settings_open_privacy_policy</string>
    <string name="settings_feedback_title">Send feedback/suggestion</string>
    <string name="settings_feedback_summary">Provide a feedback about this app or make a suggestion about improvements</string>
    <string name="settings_feedback_key" translatable="false">settings_feedback</string>
    <string name="settings_ringtone_silent_summary">Silent</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_user_data_name_greetings">&#9728; Greeting you! &#9728;</string>
    <string name="drawer_item_help_us">Help Us</string>
    <string name="section_dictionaries">Dictionaries</string>
    <string name="section_history">History</string>
    <string name="section_lookup">Lookup</string>
    <string name="section_bookmarks">Bookmarks</string>
    <string name="section_lucky">Random lookup</string>
    <string name="theme_name_default">Pink</string>
    <string name="theme_name_indigo">Indigo</string>
    <string name="theme_name_blue">Blue</string>
    <string name="theme_name_cyan">Cyan</string>
    <string name="theme_name_teal">Teal</string>
    <string name="theme_name_green">Green</string>
    <string name="theme_name_lgreen">Light Green</string>
    <string name="theme_name_purple">Purple</string>
    <string name="theme_name_brown">Brown</string>
    <string name="theme_name_orange">Orange</string>
    <string name="theme_name_dark">Dark</string>
    <string name="theme_name_bleach">Bleach</string>
    <string name="auth_flow_fetch_token_io_error">Network or server error. Check your connection and try again.</string>
    <string name="auth_flow_device_suitability">This device isn\'t supported for some reasons.</string>
    <string name="auth_flow_sign_in_twice">You are already authorized. Please sign out first.</string>
    <string name="auth_flow_no_network">No network connection available.</string>
    <string name="auth_flow_unknown_error">Unknown error, please repeat again.</string>
    <string name="auth_flow_rejected">The authorization was rejected.</string>
    <string name="auth_flow_pick_account">You must pick an account.</string>
    <string name="open_url_fallback_no_apps_to_open">You don\'t have apps to open links</string>
    <string name="custom_tab_action_share">Share</string>
    <string name="custom_tab_action_email">Email</string>
    <string name="custom_tab_action_email_mail_title">Check this out</string>
    <string name="dialog_help_us_title">Help Us</string>
    <string name="share_app_text">Yo!\n\nCheck out the following app \n%s\nIt is really interesting stuff!\nDownload and enjoy!</string>
    <string name="action_find_dictionaries_on_device">Scan device</string>
    <string name="action_find_in_page">Find in page</string>
    <string name="action_bookmark_article">Bookmark</string>
    <string name="action_search_externally_article">Search externally</string>
    <string name="action_article_in_fullscreen">Toggle fullscreen mode</string>
    <string name="action_filter">Filter</string>
    <string name="action_ascending">Ascending</string>
    <string name="action_descending">Descending</string>
    <string name="action_sort_by_title">By title</string>
    <string name="action_sort_by_time">By time</string>
    <string name="action_lookup">Lookup</string>
    <string name="action_zoom_out">Zoom text out</string>
    <string name="action_zoom_in">Zoom text in</string>
    <string name="action_zoom_reset">Reset text zoom</string>
    <string name="action_select_style">Style …</string>
    <string name="action_print_article">Print</string>
    <string name="action_tts">Pronounce</string>
    <string name="action_tts_all">Start reading</string>
    <string name="action_tts_selection">Read selection</string>
    <string name="select_style">Select style</string>
    <string name="setting_remote_content_always">Always</string>
    <string name="setting_remote_content_wifi">When on Wi-Fi</string>
    <string name="setting_remote_content_never">Never</string>
    <string name="article_collection_nothing_found">Nothing found</string>
    <string name="article_collection_selected_not_available">Selected article is not available</string>
    <string name="article_collection_nothing_to_lookup">Nothing to look up</string>
    <string name="nothing_found">Nothing found</string>
    <string name="dictionaries_scanning_device">Scanning device …</string>
    <string name="dictionaries_confirm_forget">Forget "%1$s"?</string>
    <string name="lookup_nothing_found">Nothing found</string>
    <string name="delete">Delete</string>
    <string name="blob_descriptor_confirm_delete">Delete %1$s?</string>
    <string name="action_add_dictionaries">Add</string>
    <string name="title_activity_file_select">Select dictionary</string>
    <string name="action_goto_parent_dir">Up</string>
    <string name="action_reload_directory">Reload</string>
    <string name="msg_dictionary_already_open">Already opened</string>
    <string name="msg_dictionary_added">Added %1$s</string>
    <string name="article_collection_invalid_link">Invalid link</string>
    <string name="action_load_remote_content">Load remote content</string>
    <string name="article_style_auto_style_title">Auto</string>
    <string name="article_style_default_style_title">Default</string>
    <string name="article_style_night_style_title">Night</string>
    <string name="article_style_global_nighty_style_title">Global Nighty</string>
    <string name="article_style_global_lightwood_style_title">Global Lightwood</string>
    <plurals name="confirm_delete_bookmark_count">
        <item quantity="zero">%,d bookmarks</item>
        <item quantity="one">%,d bookmark</item>
        <item quantity="two">%,d bookmarks</item>
        <item quantity="few">%,d bookmarks</item>
        <item quantity="many">%,d bookmarks</item>
        <item quantity="other">%,d bookmarks</item>
    </plurals>
    <plurals name="confirm_delete_history_count">
        <item quantity="zero">%,d history records</item>
        <item quantity="one">%,d history record</item>
        <item quantity="two">%,d history records</item>
        <item quantity="few">%,d history records</item>
        <item quantity="many">%,d history records</item>
        <item quantity="other">%,d history records</item>
    </plurals>
    <plurals name="dict_item_count">
        <item quantity="zero">%,d items</item>
        <item quantity="one">%,d item</item>
        <item quantity="two">%,d items</item>
        <item quantity="few">%,d items</item>
        <item quantity="many">%,d items</item>
        <item quantity="other">%,d items</item>
    </plurals>
    <string name="wtf_emo" translatable="false">ヽ(｀⌒´メ)ノ</string>
    <string name="dictionaries_store_mirror_fab_label_one">Store (CloudMail)</string>
    <string name="dictionaries_store_mirror_fab_label_two">Store (GitHub)</string>
    <string name="dictionaries_store_mirror_fab_label_three">Store (Yandex)</string>
    <string name="dictionaries_store_mirror_one">&#10047;&#160; Store (CloudMail)</string>
    <string name="dictionaries_store_mirror_two">&#10047;&#160; Store (GitHub)</string>
    <string name="dictionaries_store_mirror_three">&#10047;&#160; Store (Yandex)</string>
</resources>