<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/settings_preference_screen_root">

    <org.brainail.EverboxingLexis.ui.views.preference.PreferenceCategory
        android:enabled="false"
        android:key="@string/settings_category_data_transfer"
        android:title="@string/settings_data_transfer_header">

        <org.brainail.EverboxingLexis.ui.views.preference.SwitchPreferenceCompat
            android:key="@string/settings_sync_account_key"
            android:title="@string/settings_sync_account_title"
            android:defaultValue="false"
            android:summary="@string/settings_sync_account_summary"/>

    </org.brainail.EverboxingLexis.ui.views.preference.PreferenceCategory>

    <org.brainail.EverboxingLexis.ui.views.preference.PreferenceCategory
        android:title="@string/settings_theme_header">

        <org.brainail.EverboxingLexis.ui.views.preference.Preference
            android:key="@string/settings_change_theme_key"
            android:title="@string/settings_change_theme_title"/>

    </org.brainail.EverboxingLexis.ui.views.preference.PreferenceCategory>

    <org.brainail.EverboxingLexis.ui.views.preference.PreferenceCategory
        android:title="@string/settings_content_header">

        <org.brainail.EverboxingLexis.ui.views.preference.Preference
            android:key="@string/settings_load_remote_content_key"
            android:title="@string/settings_load_remote_content_title"/>

        <org.brainail.EverboxingLexis.ui.views.preference.Preference
            android:key="@string/settings_speech_language_key"
            android:title="@string/settings_speech_language_title"/>

        <org.brainail.EverboxingLexis.ui.views.preference.SwitchPreferenceCompat
            android:key="@string/settings_fab_zoom_key"
            android:title="@string/settings_fab_zoom_title"
            android:defaultValue="true"
            android:summary="@string/settings_fab_zoom_summary"/>

        <org.brainail.EverboxingLexis.ui.views.preference.SwitchPreferenceCompat
            android:key="@string/settings_double_tap_scroll_to_top_key"
            android:title="@string/settings_double_tap_scroll_to_top_title"
            android:defaultValue="true"
            android:summary="@string/settings_double_tap_scroll_to_top_summary"/>

        <org.brainail.EverboxingLexis.ui.views.preference.SwitchPreferenceCompat
            android:key="@string/settings_long_tap_scroll_to_bottom_key"
            android:title="@string/settings_long_tap_scroll_to_bottom_title"
            android:defaultValue="true"
            android:summary="@string/settings_long_tap_scroll_to_bottom_summary"/>

        <org.brainail.EverboxingLexis.ui.views.preference.SwitchPreferenceCompat
            android:key="@string/settings_volume_navigation_key"
            android:title="@string/settings_volume_navigation_title"
            android:defaultValue="false"
            android:summary="@string/settings_volume_navigation_summary"/>

        <org.brainail.EverboxingLexis.ui.views.preference.SwitchPreferenceCompat
            android:key="@string/settings_article_in_fullscreen_key"
            android:title="@string/settings_article_in_fullscreen_title"
            android:defaultValue="false"
            android:summary="@string/settings_article_in_fullscreen_summary"/>

    </org.brainail.EverboxingLexis.ui.views.preference.PreferenceCategory>

    <org.brainail.EverboxingLexis.ui.views.preference.PreferenceCategory
        android:key="@string/settings_category_lookup"
        android:title="@string/settings_lookup_header">

        <org.brainail.EverboxingLexis.ui.views.preference.SwitchPreferenceCompat
            android:key="@string/settings_random_lookup_key"
            android:title="@string/settings_random_lookup_title"
            android:defaultValue="false"
            android:summary="@string/settings_random_lookup_summary"/>

    </org.brainail.EverboxingLexis.ui.views.preference.PreferenceCategory>

    <org.brainail.EverboxingLexis.ui.views.preference.PreferenceCategory
        android:title="@string/settings_misc_header">

        <org.brainail.EverboxingLexis.ui.views.preference.Preference
            android:key="@string/settings_feedback_key"
            android:summary="@string/settings_feedback_summary"
            android:title="@string/settings_feedback_title"/>

        <org.brainail.EverboxingLexis.ui.views.preference.Preference
            android:key="@string/settings_open_privacy_policy_key"
            android:title="@string/settings_open_privacy_policy_title"/>

        <org.brainail.EverboxingLexis.ui.views.preference.Preference
            android:key="@string/settings_open_about_key"
            android:title="@string/settings_open_about_title"/>

    </org.brainail.EverboxingLexis.ui.views.preference.PreferenceCategory>

</PreferenceScreen>
