<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_bookmark_article"
        android:checkable="true"
        android:checked="false"
        android:title="@string/action_bookmark_article"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_find_in_page"
        android:title="@string/action_find_in_page"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_zoom_in"
        android:title="@string/action_zoom_in"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_zoom_out"
        android:title="@string/action_zoom_out"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_zoom_reset"
        android:title="@string/action_zoom_reset"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_load_remote_content"
        android:title="@string/action_load_remote_content"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_select_style"
        android:title="@string/action_select_style"
        app:showAsAction="ifRoom"/>
</menu>